# BeggarSockets

./: README.md  settings.gradle
app/: build.gradle
app/jni/: Android.mk  Application.mk  CMakeLists.txt  Config.h
app/jni/tcp/: BufferStorage.cpp  BufferStorage.h  ByteStream.cpp  ByteStream.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerCallback.h  ConnectitonManager.h  DataCenter.cpp  DataCenter.h  EventsDispatcher.cpp  EventsDispatcher.h  NativeByteBuffer.cpp  NativeByteBuffer.h  PacketHeader.h  Request.cpp  Request.h  SocketCloseReason.h  TcpConnection.cpp  TcpConnection.h  TcpConnectionStatus.h  TcpConstant.h  TcpSocket.cpp  TcpSocket.h  TimeUtil.cpp  Timer.cpp  Timer.h
app/src/androidTest/java/com/beggar/sockets/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/beggar/sockets/: MainActivity.kt
app/src/main/java/com/beggar/sockets/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/beggar/sockets/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
